--- a/cs310_project/pubspec.yaml
+++ b/cs310_project/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
+  
+  # Firebase
+  firebase_core: ^2.27.1
+  firebase_analytics: ^10.8.10
+  firebase_auth: ^4.17.9
+  cloud_firestore: ^4.15.9
+  firebase_storage: ^11.6.10
 
 dev_dependencies:
   flutter_test:
