--- a/cs310_project/pubspec.yaml
+++ b/cs310_project/pubspec.yaml
@@ -37,11 +37,12 @@ dependencies:
   google_fonts: ^6.2.1
   
   # Firebase
-  firebase_core: ^2.27.1
+  firebase_core: ^2.24.2
   firebase_analytics: ^10.8.10
-  firebase_auth: ^4.17.9
-  cloud_firestore: ^4.15.9
+  firebase_auth: ^4.15.3
+  cloud_firestore: ^4.13.6
   firebase_storage: ^11.6.10
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
